--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
   <body>
     <div
       id="speechstate"
-      data-azure-key="<your azure key>" 
+      data-azure-key="a5825b28d67f441584d2d9641121f5d6" 
       data-tts-voice="en-US"
       data-asr-language="en-US"
     ></div>
