--- a/static/index.html
+++ b/static/index.html
@@ -12,9 +12,13 @@
   <body>
     <div
       id="speechstate"
-      data-azure-key="a5825b28d67f441584d2d9641121f5d6" 
+      data-azure-key="84efb5769fff42138bf285e6b82642a5" 
       data-tts-voice="en-US"
       data-asr-language="en-US"
+      data-azure-nlu-key="54068e5b4fbe4aa196a3bf49b48c59a4"
+      data-azure-nlu-url="https://a2c945t4.cognitiveservices.azure.com/language/:analyze-conversations?api-version=2022-10-01-preview"
+      data-azure-nlu-project-name="Lab_4_MLT_Dialogue_Systems"
+      data-azure-nlu-deployment-name="appointment"
     ></div>
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
