--- a/static/index.html
+++ b/static/index.html
@@ -16,7 +16,7 @@
       data-tts-voice="en-US"
       data-asr-language="en-US"
       data-azure-nlu-key="44fdaa38fafa415883bb1c255997df04"
-      data-azure-nlu-url="https://a2c945t4.cognitiveservices.azure.com/language/:analyze-conversations?api-version=2022-10-01-preview"
+      data-azure-nlu-url="https://languageresourcedialoguesystems2023.cognitiveservices.azure.com/language/:analyze-conversations?api-version=2022-10-01-preview"
       data-azure-nlu-project-name="Lab_4_NLU"
       data-azure-nlu-deployment-name="appointment"
     ></div>
